k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mission-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - colombia-mission-test.asteria-labs.com
    secretName: tls-certs
  rules:
  - host: colombia-mission-test.asteria-labs.com
    http:
      paths:
      - path: /
        backend:
          serviceName: mission-app
          servicePort: 3000
